2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * libseahorse/seahorse-notification.c: Update libnotify support to 0.3
    
2006-02-24  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-daemon.c:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * plugins/applet/seahorse-applet.c:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * src/main.c: Some small changes to our stock icon helper functions to
    allow multiple icon tables to be loaded. 
    
2006-02-22  Adam Schreiber  <sadam@clemson.edu>

    * plugins/gedit/seahorse-gedit-bonobo.c: include 
    seahorse-pgp-key.h so the gedit plugin builds.

2006-02-22  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/gedit/seahorse-gedit-bonobo.c:
    * plugins/gedit/seahorse-gedit-plugin.c: Delay initialization of
    SeahorseContext to first usage to speed up loading of gedit.
    
2006-02-22  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-prefs.c:
    * plugins/applet/GNOME_SeahorseApplet.server.in.in:
    * plugins/applet/GNOME_SeahorseApplet.xml:
    * plugins/applet/seahorse-applet.c: Rework of applet. Simplify props.
    Make secure memory work properly. Delay initialization till first
    operation. Style and compile fixes.
    
2006-02-19  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-pgp-key-op.c: Fix state machine for signing keys.
    Patch by Daniel Rodriguez Garcia.  (Bug #319409)

2006-02-17  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * plugins/gedit/Makefile.am:
    * plugins/gedit/seahorse-gedit-bonobo.c:
    * plugins/gedit/seahorse-gedit-plugin.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/gedit/seahorse-gedit.h:
    * plugins/gedit/seahorse-pgp.gedit-plugin.desktop.in: 
    Adapt gedit plugin to gedit 2.14 plugin API. Bug #328330
    
2006-01-31  Adam Schreiber  <sadam@clemson.edu>
