@@ -1,5 +1,17 @@
 2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * pixmaps/Makefile.am:
+    * pixmaps/seahorse-applet-encrypted.png:
+    * pixmaps/seahorse-applet-key.png:
+    * pixmaps/seahorse-applet-signed.png:
+    * pixmaps/seahorse-applet-text.png:
+    * pixmaps/seahorse-applet-unknown.png:
+    * pixmaps/seahorse-applet.xcf:
+    * plugins/applet/seahorse-applet.c: Show state of clipboard contents in 
+    the applet icon. Only display relevant menu items. 
+    
+2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
+
     * configure.in:
     * libseahorse/seahorse-notification.c: Update libnotify support to 0.3
     
